Add shadow and padding to devise content-wrapper

--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -8,3 +8,9 @@ html, body {
   height: 85%;
   min-height: 85%;
 }
+
+.content-wrapper {
+  padding: 30px;
+  border-radius: 5px;
+  box-shadow: 0 0 15px #ccc;
+}
