--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -11,7 +11,7 @@
 
     <div class="container-fluid fill">
       <div class="row justify-content-center d-flex align-content-center fill">
-        <div class="content-wrapper ">
+        <div class="content-wrapper form-group">
           <%= yield %>
         </div>
       </div>
