--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,12 @@
   <body>
     <%= render partial: 'partials/header' %>
 
-    <%= yield %>
+    <div class='container-fluid'>
+      <div class='row'>
+        <div class='container-fluid col-10-lg offset-1 offset-right-1 main-wrapper'>
+          <%= yield %>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
