Fix minor issues

--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -10,7 +10,7 @@
     <%= render partial: 'partials/header' %>
 
     <div class="container-fluid fill">
-      <div class="row justify-content-center d-flex align-content-center fill">
+      <div class="row justify-content-center align-content-center fill">
         <div class="content-wrapper form-group">
           <%= yield %>
         </div>
