--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 @import 'bootstrap';
 @import 'bootstrap_right_offset';
 @import 'font_awesome5';
+@import 'partials/domains';
 
 .main-wrapper {
   padding: 30px 0;
