Extend domain show page

--- a/app/assets/stylesheets/partials/domains.scss
+++ b/app/assets/stylesheets/partials/domains.scss
@@ -1,9 +1,18 @@
 #domains {
-  h2 {
-    padding-bottom: 0.5em;
+  .btn {
+    margin: 5px 3px;
   }
 
-  .btn {
-    margin: 5px 0;
+  .row {
+    padding: 10px 0;
+  }
+
+  h5 {
+    padding: 7px 0;
+    margin-bottom: 0;
+
+    &:hover {
+      cursor: pointer;
+    }
   }
 }
