--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import 'bootstrap_right_offset';
 @import 'font_awesome5';
 @import 'partials/domains';
+@import 'partials/stamps';
 
 .main-wrapper {
   padding: 30px 0;
