--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,10 @@
 @import 'bootstrap';
 @import 'bootstrap_right_offset';
 @import 'font_awesome5';
+
+@import 'partials/variables';
+
+@import 'partials/colors';
 @import 'partials/domains';
 @import 'partials/stamps';
 
