--- a/app/assets/stylesheets/partials/domains.scss
+++ b/app/assets/stylesheets/partials/domains.scss
@@ -1,15 +1,24 @@
 #domains {
+  h2 {
+    padding: 30px 0 10px 0;
+  }
+
   .btn {
     margin: 5px 3px;
   }
 
-  .row {
-    padding: 10px 0;
-  }
-
   h5 {
-    padding: 7px 0;
+    padding: 12px 0;
     margin-bottom: 0;
+
+    &.collapsible {
+      padding-left: 7px;
+
+      &:hover {
+        border-radius: 5px;
+        background-color: #fbfbfb;
+      }
+    }
 
     &:hover {
       cursor: pointer;
