--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,8 @@
   <body>
     <%= render partial: 'partials/header' %>
 
-    <div class='container-fluid'>
-      <div class='row'>
-        <div class='container-fluid col-8 offset-2 offset-right-2 main-wrapper'>
-          <%= yield %>
-        </div>
-      </div>
+    <div class='container'>
+      <%= yield %>
     </div>
   </body>
 </html>
