--- a/app/views/partials/_stamp_group.html.erb
+++ b/app/views/partials/_stamp_group.html.erb
@@ -1,14 +1,14 @@
 <% if @domain.stamps.send(title.parameterize.underscore).present? %>
-  <div class='row'>
+  <% if local_assigns.fetch :header, true %>
     <h5>
       <%= title %>
       &nbsp;
       <%= fa_icon('angle-right') %>
     </h5>
-    <span style='<%= "display: none;" if hidden ||= nil %>'>
-      <% @domain.stamps.send(title.parameterize.underscore).order(percentage: :desc).each do |stamp| %>
-        <%= render partial: 'partials/stamp', locals: { stamp: stamp, btn_class: btn_class ||= 'btn-info' } %>
-      <% end %>
-    </span>
-  </div>
+  <% end %>
+  <span style='<%= "display: none;" if hidden %>'>
+    <% @domain.stamps.send(title.parameterize.underscore).order(percentage: :desc).each do |stamp| %>
+      <%= render partial: 'partials/stamp', locals: { stamp: stamp, btn_class: btn_class ||= 'btn-info' } %>
+    <% end %>
+  </span>
 <% end %>
