Improve style of collapsible stamp groups

--- a/app/views/partials/_stamp_group.html.erb
+++ b/app/views/partials/_stamp_group.html.erb
@@ -1,12 +1,16 @@
 <% if @domain.stamps.send(title.parameterize.underscore).present? %>
   <% if local_assigns.fetch :header, true %>
-    <h5>
-      <%= title %>
+    <h5 class='collapsible'>
+      <% if collapsed ||= false %>
+        <%= fa_icon('angle-down') %>
+      <% else %>
+        <%= fa_icon('angle-up') %>
+      <% end %>
       &nbsp;
-      <%= fa_icon('angle-right') %>
+      <%= title %>
     </h5>
   <% end %>
-  <span style='<%= "display: none;" if hidden %>'>
+  <span class="<%= 'hidden' if collapsed %>">
     <% @domain.stamps.send(title.parameterize.underscore).order(percentage: :desc).each do |stamp| %>
       <%= render partial: 'partials/stamp', locals: { stamp: stamp, btn_class: btn_class ||= 'btn-info' } %>
     <% end %>
