--- a/app/views/domains/show.html.erb
+++ b/app/views/domains/show.html.erb
@@ -5,9 +5,9 @@
   <div class='col-md-6 col-sm-12'>
     <%= render partial: 'partials/stamp_group', locals: { title: 'Accepted', header: false, btn_class: 'btn-accepted' } %>
     <%= render partial: 'partials/stamp_group', locals: { title: 'In Progress' } %>
-    <%= render partial: 'partials/stamp_group', locals: { title: 'Archived', hidden: true, btn_class: 'btn-secondary' } %>
-    <%= render partial: 'partials/stamp_group', locals: { title: 'Overruled', hidden: true, btn_class: 'btn-secondary' } %>
-    <%= render partial: 'partials/stamp_group', locals: { title: 'Denied', hidden: true, btn_class: 'btn-denied' } %>
+    <%= render partial: 'partials/stamp_group', locals: { title: 'Archived', collapsed: true, btn_class: 'btn-secondary' } %>
+    <%= render partial: 'partials/stamp_group', locals: { title: 'Overruled', collapsed: true, btn_class: 'btn-secondary' } %>
+    <%= render partial: 'partials/stamp_group', locals: { title: 'Denied', collapsed: true, btn_class: 'btn-denied' } %>
   </div>
   <% if @domain.children.present? %>
     <div class='col-md-6 col-sm-12'>
