Fix typo and fa icon on homepage

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -9,11 +9,11 @@
   </div>
   <div class="row align-items-center">
     <div class="col-2 offset-2">
-      <%= fa_icon 'user', size: '5x' %>
+      <%= fa_icon 'users', size: '5x' %>
     </div>
     <div class="col-6 offset-right-2">
       <h2>Manage the worlds metadata</h2>
-      <p class="lead">Stamp is a community which categorises the web: this site is all about Music, this one is malicious, and this one is pure Gambling</p>
+      <p class="lead">Stamp is a community that categorizes the web: this site is all about Music, this one is malicious, and this one is pure Gambling</p>
     </div>
   </div>
   <div class="row align-items-center">
