--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -9,7 +9,7 @@
   </div>
   <div class="row align-items-center">
     <div class="col-2 offset-2">
-      <%= fa_icon 'users', size: '5x' %>
+      <%= fa_icon 'user-check', size: '5x' %>
     </div>
     <div class="col-6 offset-right-2">
       <h2>Manage the worlds metadata</h2>
