Move profile snippets to their own partial

--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,87 +1,7 @@
 <span id='users'>
   <div class='row'>
-    <div class='col-sm-3 col-md-3'>
-      <div class='profile-holder rounded'>
-        <div class='square text-center'>
-          <div class='square-content'>
-            <div class='square-table'>
-              <div class='square-table-cell'>
-                <%= fa_icon 'user 7x' %>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="container">
-          <div class="row reputation-holder">
-            <div class="col-5 text-center voting-power">
-              💪 <%= @user.voting_power %>
-            </div> <div class="col-7 text-center padding-0">
-              <%= @user.reputation %> <span class='small text-muted'>REP</span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class='col-sm-9 col-md-6'>
-      <h3><%= @user.username %></h3>
-      <% # @user.description %>
-      <p>
-        This is a story of my stamp life: I once was a stamp. Later I found out, instead of being a stamp, you could stamp the world. So I stopped being a stamp and became a stamper.
-      </p>
-    </div>
-
-    <div class='col-sm-12 col-md-3'>
-      <div class='container'>
-        <div class='row'>
-          <h5><%= fa_icon 'chart-bar', type: :regular %>&nbsp;&nbsp;Stats</h5>
-        </div>
-        <div class='row'>
-          <div class='col-2 padding-0 text-center'>
-            <%= image_tag 'stamp_j3rik0_no_text_icon', style: 'height: 1em;' %>
-          </div>
-          <div class='col-10'>
-            <%= @user.stamps.count %> <span class='small text-muted'>stamps</span>
-          </div>
-        </div>
-        <div class='row align-items-center'>
-          <div class='col-2 padding-0 text-center'>
-            <%= fa_icon 'sort', style: 'font-size: 1.3em;' %>
-          </div>
-          <div class='col-10'>
-            554<%#= @user.votes.count %> <span class='small text-muted'>cast votes</span>
-          </div>
-        </div>
-        <div class='row'>
-          <div class='col-2 padding-0 text-center'>
-            <%= fa_icon 'link', style: 'font-size: 1.1em;' %>
-          </div>
-          <div class='col-10'>
-            67<%#= @user.domains.count %> <span class='small text-muted'>domains</span>
-          </div>
-        </div>
-      </div>
-      <div class='container user-stats'>
-        <div class='row'>
-          <h5><%= fa_icon 'user-check', style: 'font-size: 0.8em;' %>&nbsp;&nbsp;User</h5>
-        </div>
-        <div class='row align-items-center'>
-          <div class='col-2 padding-0 text-center'>
-            <%= fa_icon 'calendar-alt', style: 'font-size: 1em;' %>
-          </div>
-          <div class='col-10'>
-            <%= time_ago_in_words @user.created_at %>&nbsp;<span class='small text-muted'>ago</span>
-          </div>
-        </div>
-        <div class='row'>
-          <div class='col-2 padding-0 text-center'>
-            <%= fa_icon 'chart-pie', style: 'font-size: 1em;' %>
-          </div>
-          <div class='col-10'>
-            67&nbsp;%&nbsp;<span class='small text-muted'>success rate</span>
-          </div>
-        </div>
-      </div>
-    </div>
+    <%= render partial: 'users/partials/profile_image' %>
+    <%= render partial: 'users/partials/description' %>
+    <%= render partial: 'users/partials/stats' %>
   </div>
 </span>
