--- a/app/views/users/partials/_stats.html.erb
+++ b/app/views/users/partials/_stats.html.erb
@@ -8,7 +8,7 @@
         <%= image_tag 'stamp_j3rik0_no_text_icon', style: 'height: 1em;' %>
       </div>
       <div class='col-10'>
-        <%= @user.stamps.count %> <span class='small text-muted'>stamps</span>
+        <%= @user.stamps.count %>&nbsp;<span class='small text-muted'>stamps</span>
       </div>
     </div>
     <div class='row align-items-center'>
@@ -16,7 +16,7 @@
         <%= fa_icon 'sort', style: 'font-size: 1.3em;' %>
       </div>
       <div class='col-10'>
-        554<%#= @user.votes.count %> <span class='small text-muted'>cast votes</span>
+        <%= @user.votes.count %>&nbsp;<span class='small text-muted'>cast votes</span>
       </div>
     </div>
     <div class='row'>
@@ -24,7 +24,7 @@
         <%= fa_icon 'link', style: 'font-size: 1.1em;' %>
       </div>
       <div class='col-10'>
-        67<%#= @user.domains.count %> <span class='small text-muted'>domains</span>
+        <%= @user.domains.count %>&nbsp;<span class='small text-muted'>domains</span>
       </div>
     </div>
   </div>
