--- a/app/assets/stylesheets/partials/users.scss
+++ b/app/assets/stylesheets/partials/users.scss
@@ -1,62 +1,66 @@
 #users {
-  .row:first-child {
+  > .row:first-child {
     padding-top: 5%;
 
-    &.reputation-holder {
-      padding-top: 10%;
+    .profile-holder {
+      border: 1px solid #ccc;
+      padding: 12% 12% 8% 12%;
+
+      .square {
+        position: relative;
+        overflow:hidden;
+        width: 100%;
+        margin: 1.66%;
+        padding-bottom: 100%;
+
+        .square-content {
+          position: absolute;
+          height: 100%;
+          width: 100%;
+          border: 1px solid #ccc;
+
+          .square-table {
+            display: table;
+            height: 100%;
+            width: 100%;
+
+            .square-table-cell {
+              display: table-cell;
+              height: 100%;
+              width: 100%;
+              vertical-align: middle;
+            }
+          }
+        }
+
+        .reputation-holder {
+          padding-top: 10%;
+
+          .voting-power {
+            border-right: 1px solid #ccc;
+            padding-left: 0;
+            padding-right: 5%;
+          }
+        }
+      }
     }
 
-    .col-6 {
+    .description {
       padding: 3%;
 
       h3 {
         margin-bottom: 2%;
       }
     }
-  }
 
-  .profile-holder {
-    border: 1px solid #ccc;
-    padding: 12% 12% 8% 12%;
-
-    .square {
-      position: relative;
-      overflow:hidden;
-      width: 100%;
-      margin: 1.66%;
-      padding-bottom: 100%;
-
-      .square-content {
-        position: absolute;
-        height: 100%;
-        width: 100%;
-        border: 1px solid #ccc;
-
-        .square-table {
-          display: table;
-          height: 100%;
-          width: 100%;
-
-          .square-table-cell {
-            display: table-cell;
-            height: 100%;
-            width: 100%;
-            vertical-align: middle;
-          }
-        }
-      }
-    }
-  }
-
-  .voting-power {
-    border-right: 1px solid #ccc;
-    padding-left: 0;
-    padding-right: 5%;
-  }
-
-  .user-stats {
-    .row:first-child {
+    .row.user-stats {
       padding-top: 15%;
     }
+  }
+
+  .top-label {
+    padding: 2% 0;
+    background-color: #ccc;
+    margin: 2% 0;
   }
 }
