--- a/app/views/users/partials/_description.html.erb
+++ b/app/views/users/partials/_description.html.erb
@@ -1,4 +1,4 @@
-<div class='col-sm-9 col-md-6'>
+<div class='col-sm-9 col-md-6 description'>
   <h3><%= @user.username %></h3>
   <% # @user.description %>
   <p>
