--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -4,4 +4,27 @@
     <%= render partial: 'users/partials/description' %>
     <%= render partial: 'users/partials/stats' %>
   </div>
+
+  <div class='row'>
+    <div class='col-12'>
+      <h4>Top Labels</h4>
+    </div>
+    <div class='col-5'>
+      <% @user.top_labels.each do |label| %>
+        <div class='row top-label bg-light-2'>
+          <div class='col-12 align-self-center'>
+            <%= link_to label_path(1) do %>
+              <div class='btn btn-primary'>
+                <%= label.name %>
+              </div>
+            <% end %>
+            <span style='float: right;'>
+              <%= image_tag 'stamp_j3rik0_no_text_icon', style: 'height: 1em;' %>
+              <%= label.count %>
+            </span style='float: right;'>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
 </span>
