--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,6 +7,7 @@
 @import 'partials/colors';
 @import 'partials/domains';
 @import 'partials/homepage';
+@import 'partials/labels';
 @import 'partials/stamps';
 @import 'partials/users';
 
