--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,12 @@
 <span id='users'>
   <div class='row'>
-    <%= render partial: 'users/partials/profile_image' %>
+    <div class='col-sm-3 col-md-3'>
+      <div class='profile-holder border rounded'>
+        <%= render partial: 'users/partials/profile_image', locals: { size: '7x' } %>
+        <%= render partial: 'users/partials/reputation_row', locals: { size: '7x', user: @user } %>
+      </div>
+    </div>
+
     <%= render partial: 'users/partials/description' %>
     <%= render partial: 'users/partials/stats' %>
   </div>
