Add user snippet to stamp show

--- a/app/assets/stylesheets/partials/stamps.scss
+++ b/app/assets/stylesheets/partials/stamps.scss
@@ -1,3 +1,17 @@
+#stamps {
+  .row:nth-child(2) {
+    padding: 20px 0;
+
+    .row {
+      padding: 15px 0;
+
+      .row {
+        padding: 5px 0;
+      }
+    }
+  }
+}
+
 .btn-accepted {
   color: white;
   background-color: #9e009e;
