--- a/app/views/stamps/show.html.erb
+++ b/app/views/stamps/show.html.erb
@@ -25,11 +25,26 @@
 
   <div class='row'>
     <div class='col-4 offset-right-4'>
-      <%= @stamp.state %>
+      <div class='row'>
+        <div class='col-12'>
+          <h5>State</h5>
+        </div>
+      </div>
+      <div class='row'>
+        <div class='col-12'>
+          <button type='button' class='btn btn-info'>
+            <%= @stamp.state.titleize %>
+          </button>
+        </div>
+      </div>
     </div>
 
     <div class='col-4'>
-      <h5>Created by</h5>
+      <div class='row'>
+        <div class='col-12'>
+          <h5>Created by</h5>
+        </div>
+      </div>
       <div class='row border rounded'>
         <div class='col-4 align-self-center'>
           <%= render partial: 'users/partials/profile_image', locals: { size: '3x' } %>
