--- a/app/views/users/partials/_description.html.haml
+++ b/app/views/users/partials/_description.html.haml
@@ -1,7 +1,5 @@
-<div class='col-sm-9 col-md-6 description'>
-  <h3><%= @user.username %></h3>
-  <% # @user.description %>
-  <p>
+.col-sm-9.col-md-6.description
+  %h3= @user.username
+  - # @user.description
+  %p
     This is a story of my stamp life: I once was a stamp. Later I found out, instead of being a stamp, you could stamp the world. So I stopped being a stamp and became a stamper.
-  </p>
-</div>
