Reuse reputation row in stamps show

--- a/app/views/stamps/show.html.haml
+++ b/app/views/stamps/show.html.haml
@@ -35,11 +35,7 @@
             .col-12.lead.pb-2
               = link_to user_path(@stamp.creator), class: 'default-color' do
                 = @stamp.creator.username
-            .col-4.text-center.border-right
-              💪 #{@stamp.creator.voting_power}
-            .col-8.text-center.p-0
-              = @stamp.creator.reputation
-              %span.small.text-muted REP
+            = render partial: 'users/partials/reputation_row', locals: { user: @stamp.creator }
   .row
     .col-6
       .row.collapsible
