--- a/app/views/users/partials/_reputation_row.html.haml
+++ b/app/views/users/partials/_reputation_row.html.haml
@@ -1,6 +1,7 @@
-.row.reputation-holder
-  .col-5.text-center.border-right
-    💪 #{user.voting_power}
-  .col-7.text-center.p-0
-    = user.reputation
-    %span.small.text-muted REP
+- left_col_size ||= 4
+
+.text-center.border-right{class: "col-#{left_col_size}"}
+  💪 #{user.voting_power}
+.text-center.p-0{class: "col-#{12 - left_col_size}"}
+  = user.reputation
+  %span.small.text-muted REP
