Refactor stamp show to use window

--- a/app/assets/stylesheets/partials/stamps.scss
+++ b/app/assets/stylesheets/partials/stamps.scss
@@ -1,5 +1,5 @@
 #stamps {
-  .row:nth-child(2) {
+  .row.second {
     padding: 20px 0;
 
     .row {
@@ -7,6 +7,20 @@
 
       .row {
         padding: 5px 0;
+      }
+    }
+  }
+
+  .window {
+    .window-header {
+      .label-holder {
+        .col-12 {
+          font-size: 1em;
+        }
+
+        div:nth-child(2) {
+          font-size: 2.1em;
+        }
       }
     }
   }
