--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,10 +1,6 @@
 %span#users
   .row
-    .col-sm-3.col-md-3
-      .profile-holder.border.rounded
-        = render partial: 'users/partials/profile_image', locals: { size: '7x' }
-        .row
-          = render partial: 'users/partials/power_rep', locals: { left_col_size: 5, user: @user }
+    = render partial: 'partials/window', locals: { path: 'users', footer: true, footer_locals: { left_col_size: 5, user: @user } }
     = render partial: 'users/partials/description'
     = render partial: 'users/partials/stats'
 
