--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,5 +10,6 @@
 @import 'partials/labels';
 @import 'partials/stamps';
 @import 'partials/users';
+@import 'partials/window';
 
 @import 'partials/global';
