--- a/app/views/stamps/show.html.haml
+++ b/app/views/stamps/show.html.haml
@@ -1,6 +1,24 @@
 %span#stamps
   .row
     = render partial: 'partials/window', locals: { path: 'stamps', header: true, footer: true }
+    .col-9.col-md-5.col-lg-6
+    .col-12.col-md-3.col-lg-2
+      .row
+        %h5
+          Created by
+      .row
+        .col-3.pl-0.d-flex.justify-content-center.align-items-center
+          = link_to user_path(@stamp.creator), class: 'default-color' do
+            = fa_icon 'user', style: 'font-size: 2.4em;'
+        .col-9.pr-0.border-left
+          .row.p-0
+            .col-12
+              = link_to user_path(@stamp.creator) do
+                = @stamp.creator.username
+          .row.p-0
+            .col-12
+              = @stamp.creator.reputation
+              %span.small.text-muted REP
   .row.second
     .col-4.offset-right-4
       .row
@@ -9,19 +27,6 @@
         .col-12
           %button.btn.btn-info{:type => "button"}
             = @stamp.state.titleize
-    .col-4
-      .row
-        .col-12
-          %h5 Created by
-      .row.border.rounded
-        .col-4.align-self-center
-          = render partial: 'users/partials/profile_image', locals: { size: '3x' }
-        .col-8
-          .row
-            .col-12.lead.pb-2
-              = link_to user_path(@stamp.creator), class: 'default-color' do
-                = @stamp.creator.username
-            = render partial: 'users/partials/window/footer', locals: { user: @stamp.creator }
   .row
     .col-6
       .row.collapsible
