Replace setting path for window partial with generic `controller_name`

--- a/app/views/stamps/show.html.haml
+++ b/app/views/stamps/show.html.haml
@@ -1,6 +1,6 @@
 %span#stamps
   .row
-    = render partial: 'partials/window', locals: { path: 'stamps', header: true, footer: true }
+    = render partial: 'partials/window', locals: { header: true, footer: true }
     .col-9.col-md-5.col-lg-6
       .row
         .col-12.text-center
