--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,6 +1,6 @@
 %span#users
   .row
-    = render partial: 'partials/window', locals: { path: 'users', footer: true, footer_locals: { left_col_size: 5, user: @user } }
+    = render partial: 'partials/window', locals: { footer: true, footer_locals: { left_col_size: 5, user: @user } }
     = render partial: 'users/partials/description'
     = render partial: 'users/partials/stats'
 
