Link domain with domain name

--- a/app/views/stamps/partials/window/_footer.html.haml
+++ b/app/views/stamps/partials/window/_footer.html.haml
@@ -1,5 +1,5 @@
 .row.window-footer
   .col-12.text-center
-    = link_to domain_path(@stamp.stampable) do
+    = link_to domain_path(@stamp.stampable.name) do
       = fa_icon 'link'
       = @stamp.stampable.name
